2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added Herwig w. hadronisation

	* MC_LHQG_EE.plot:
	simplified a few things + set a linear y scale for all plots

2015-06-05  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	bugfix: create the rebinned directories if not already present
	included results from the Sherpa runs

	* Sherpa/Run-hgg.dat:            *** ADDED ***
	* Sherpa/Run-zqq.dat:            *** ADDED ***
	* Sherpa/results:                *** ADDED ***
	added cards and results from Sherpa. Njet describes the maximal
	number of additional jets included in the Matrix Elements

	* MC_LHQG_EE.cc:
	added a check that FastJet version is at least 3.1.0

	* README.md:
	updated the desctiption to match the discussion we had on
	Thursday; added a description of the workflow and of the results
	and tools.

	* post-process.sh:               *** ADDED ***
	added a script that (i) generate the separations (ii) do a bit of
	rebinning for aesthetic reasons (iii) produce a bunch of plots

	Note that by default existing files are not overwritten. Use
	FORCE=yes post-process.sh to overwrite everything.

	* yoda-rebin.py:                 *** ADDED ***
	added a simple script to rebin our output histograms
	Watch out: this applies to te specific histograms output byu our
	analysis where different histograms are not rebinned the same way

	* compute-efficiencies.py:
	added a few quality measures according to Jesse's tex file
	[only I1/2" saved as a histogram]

2015-06-04  Jesse Thaler <jthaler@mit.edu>

	* tex/lh2015_qg.tex   *** ADDED ***
	* tex/lh2015_qg.bib   *** ADDED ***
	* jheppub.sty         *** ADDED ***
	* jhep.bst            *** ADDED ***
	added tex file with description of classifier metric

	* tex/figures/roc_curve.pdf       *** ADDED ***
	* tex/figures/truth_overlap.pdf   *** ADDED ***
	add figures to help visualize information quantities to study

2015-06-04  Gregory Soyez  <soyez@fastjet.fr>

	* README.md: