@@ -1,3 +1,8 @@
+2015-06-06  Jesse Thaler  <jthaler@mit.edu>
+
+	* compute-efficiencies.py
+	Added correct (?) uncertainties for separation plots
+
 2015-06-06  Gregory Soyez  <soyez@fastjet.fr>
 
 	* post-process.sh:
